2004-01-19 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCicode.c (geniCodeArray): applied patch from Stas Sergeev
	proposed in FR #877103

2004-01-18 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): added missing checks
	* src/SDCCicode.c (usualBinaryConversions): fixed condition
	* src/SDCCicode.c (geniCodeAdd): fixed part of bug #877103

2004-01-16 Klaus Flittner <klaus_flittner@gmx.de>

	* src/ds390/gen.c (aopOp3): fixed the assignment of different dptrs to
	equal operands

2004-01-16 Vangelis Rokas <vrokas@otenet.gr>

	* src/SDCCmain.c (linkEdit): variable $3 of the linker command is
	loaded with the linker search paths (-L arguments) and the libraries
	to be linked with the current source (-l arguments). Changes
	currently will affect only the pic16 port.
	* src/pic16/main.c (_pic16_finaliseOptions): add to the linker
	include path the port specific paths and port specific libraries,
	* gplink command now contains the $3 argument,
	* src/pic16/device.h,
	* src/pic16/device.c,: structure PIC_device is made public and
	renamed to PIC16_device, the same for variable Pics which is renamed
	to Pics16. Updated all references to them.
	* src/pic16/glue.c (pic16glue): corrected bug with code
	initialization which bypassed the variable initializations block.

	* device/lib/pic16/Makefile.rules: removed --penable-stack from
	COMPILE_FLAGS and added the --nostdinc option

2004-01-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/include/mc68hc908jb8.h: Register defs for another member
	of the hc08 family. Contributed by Bjorn Bringert - thanks!

2004-01-14 Vangelis Rokas <vrokas@otenet.gr>

	Documenting changes from previous commits.
	* configure.in (version 1.56),
	* configure: initially I've added AC_CONFIG_SUBDIRS(device/lib/pic16)
	when generating output files to configure the pic16 library,
	but now I've commented it out, since gputils aren't installed in the
	SF compile farm, so library won't compile
